--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "gulp build",
     "start": "gulp start",
-    "deploy": "gulp build && gh-pages -d build"
+    "predeploy": "gulp build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions, not IE 10"
